--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
       href="https://fonts.googleapis.com/css2?family=Oswald&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
   </head>
   <body>
-    <header>
+    <header class="header">
       <div class="logo">
         <img src="img/icon.png" alt="Cégnév logója" />
         <a href="index.html" class="company-name">Filtery</a>
@@ -28,5 +31,28 @@
         </ul>
       </nav>
     </header>
+    <h1 class="hero">Welcome to Filtery</h1>
+    <main>
+      <section class="product">
+        <h2 class="section-title">Our Products</h2>
+        <div class="product-list">
+          <div class="product-item">
+            <img class="prodph" src="img/prod1.jpg" alt="Product 1" />
+            <h3>Product 1</h3>
+            <p>Description of Product 1.</p>
+          </div>
+          <div class="product-item">
+            <img class="prodph" src="img/prod2.jpg" alt="Product 2" />
+            <h3>Product 2</h3>
+            <p>Description of Product 2.</p>
+          </div>
+          <div class="product-item">
+            <img class="prodph" src="img/prod3.jpg" alt="Product 3" />
+            <h3>Product 3</h3>
+            <p>Description of Product 3.</p>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
