--- a/us.html
+++ b/us.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/jpg" href="img/logo2.png" />
     <title>Filtery</title>
@@ -13,9 +13,12 @@
       href="https://fonts.googleapis.com/css2?family=Oswald&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
   </head>
   <body>
-    <header>
+    <header class="header">
       <div class="logo">
         <img src="img/icon.png" alt="Cégnév logója" />
         <a href="index.html" class="company-name">Filtery</a>
@@ -28,5 +31,61 @@
         </ul>
       </nav>
     </header>
+    <main>
+      <section class="about-us">
+        <h1>About Us</h1>
+        <p>
+          Welcome to Filtery, your trusted source for high-quality water filters.
+          Our mission is to provide clean and safe drinking water for everyone.
+          With years of experience in the industry, we are committed to delivering
+          innovative solutions that meet the needs of our customers.
+        </p>
+        <p>
+          At Filtery, we believe in sustainability and environmental responsibility.
+          Our products are designed to reduce plastic waste and promote a healthier planet.
+          Join us in our journey towards cleaner water and a greener future.
+        </p>
+      </section>
+      <section class="team">
+        <h2>Meet Our Team</h2>
+        <div class="team-member">
+          <img src="img/vince.jpeg" alt="Team Member 1" />
+          <h3>Böjthe Vince</h3>
+          <p>Founder & CEO</p>
+          <p>John is passionate about clean water solutions and has over 10 years of experience in the industry. He
+            leads our team with a vision for innovation and sustainability.</p>
+        </div>
+        <div class="team-member">
+          <img src="img/tiva.JPG" alt="Team Member 2" />
+          <h3>Nagy Tivadar</h3>
+          <p>Chief Operating Officer</p>
+          <p>Jane oversees our operations and ensures that we deliver the highest quality products to our customers.
+            Her expertise in supply chain management helps us maintain efficiency and sustainability.</p>
+        </div>      
+      </section>
+      <section class="map">
+        <h2>Our Location</h2>
+        <div class="map-container">
+          <iframe
+             width="100%" 
+             height="600"
+             frameborder="0" 
+             scrolling="no" 
+             marginheight="0" 
+             marginwidth="0" 
+             src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=Odorheiu%20Secueisc%20Bulevardul%20Independentei%2024+(My%20Business%20Name)&amp;t=&amp;z=17&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"
+          ></iframe>
+        </div> 
+      </section>
+    </main>
+    <footer class="footer">
+      <h2>Contact Us</h2>
+      <p>&copy; 2023 Filtery. All rights reserved.</p>
+      <p>Follow us on social media for the latest updates!</p>
+      <ul class="social-links">
+        <li>Tel: 0754580150</li>
+        <li><a href="https://www.instagram.com/filtery" target="_blank">Instagram</a></li>
+      </ul>
+    </footer>
   </body>
 </html>
