--- a/index.html
+++ b/index.html
@@ -36,21 +36,28 @@
       <section class="product">
         <h2 class="section-title">Our Products</h2>
         <div class="product-list">
-          <div class="product-item">
-            <img class="prodph" src="img/prod1.jpg" alt="Product 1" />
-            <h3>Product 1</h3>
-            <p>Description of Product 1.</p>
-          </div>
-          <div class="product-item">
-            <img class="prodph" src="img/prod2.jpg" alt="Product 2" />
-            <h3>Product 2</h3>
-            <p>Description of Product 2.</p>
-          </div>
-          <div class="product-item">
-            <img class="prodph" src="img/prod3.jpg" alt="Product 3" />
-            <h3>Product 3</h3>
-            <p>Description of Product 3.</p>
-          </div>
+
+          <a href="prods/prod1.html" class="product-item-link">
+            <div class="product-item">
+              <img class="prodph" src="img/prod1.jpg" alt="Product 2" />
+              <span class="product-link">Product1</span>
+            </div>
+          </a>
+
+          <a href="prods/prod2.html" class="product-item-link">
+            <div class="product-item">
+              <img class="prodph" src="img/prod2.jpg" alt="Product 2" />
+              <span class="product-link">Product2</span>
+            </div>
+          </a>
+
+          <a href="prods/prod3.html" class="product-item-link">
+            <div class="product-item">
+              <img class="prodph" src="img/prod3.jpg" alt="Product 3" />
+              <span class="product-link">Product3</span>
+            </div>
+          </a>
+
         </div>
       </section>
     </main>
